Creating Navbar responsive

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
     --black: #151515;
     --eerie-black: #1b1b1b;
     --black-olive: #383f3e;
-    --gradient: linear-gradient(to rigth, #3fe8ab, #78cdcd);
+    --gradient: linear-gradient(to right, #3fe8ab, #78cdcd);
 }
 
 *,*::before, *::after {
